--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,8 @@ h2 {
   left:0;
   right:0;
   background-color:#1C1C1C;
-  margin:80px;
+  padding:80px;
+  z-index:15;
 }
 
 .search .resultsModal .resultsContainer {
@@ -237,4 +238,56 @@ h2 {
 .tracks tbody>tr:last-child td{
   border: 0;
   padding-bottom:50px;
+}
+
+
+
+/* Mobile Version */
+@media(max-width:414px){
+  .app{
+    margin:40px 20px 20px 20px;
+    font-size:80%;
+  }
+
+  .search .searchRow .inputCol {
+    margin-right:0;
+  }
+
+  .search .searchRow .searchButton{
+    display:none;
+  }
+
+  .search .searchRow .searchSuggestions {
+    left:20px;
+    right:20px;
+    top:100px;
+  }
+
+  .tracks .albumInfo{
+    flex-direction: column;
+  }
+
+  .tracks .albumInfo .coverImage{
+    margin:auto;
+  }
+
+  .tracks .albumInfo .blueTitle{
+    text-align:center;
+    margin-bottom:40px;
+  }
+
+  .tracks table {
+    position:inherit;
+    top:0;
+    font-size:14px;
+  }
+
+  .tracks table .table__whitespace-header {
+    width:10px;
+  }
+
+  .tracks table .table__release-header {
+    width:18%;
+  }
+
 }
