--- a/src/App.css
+++ b/src/App.css
@@ -243,7 +243,7 @@ h2 {
 
 
 /* Mobile Version */
-@media(max-width:414px){
+@media(max-width:640px){
   .app{
     margin:40px 20px 20px 20px;
     font-size:80%;
@@ -273,6 +273,7 @@ h2 {
 
   .tracks .albumInfo .blueTitle{
     text-align:center;
+    margin-left:0;
     margin-bottom:40px;
   }
 
